added tests for UserSettingsController changed unidirectional to bidirectional connection between User and UserSettings removed redundant session variable creation